# turqstat

./: .gitignore  ChangeLog  Doxyfile.in  Makefile  Makefile.CygWin  Makefile.in  Makefile.lexertest  Makefile.linux  Makefile.nosmapi  README.Win32  README.os2  acconfig.h  arearead.h  config.h.in  configure  configure.in  convert.cpp  convert.h  datatypes.cpp  datatypes.h  doxygen.conf.in  fdapxread.cpp  fdapxread.h  jamread.cpp  jamread.h  lexer.cpp  lexer.h  lexerdriver.cpp  makedist.btm  makedist.sh  mappings.cpp  mappings.h  mypointread.cpp  mypointread.h  mytime.cpp  mytime.h  newsspoolread.cpp  newsspoolread.h  nntpread.cpp  nntpread.h  (+40 more)
debian/: changelog  control  copyright  dirs  rules  turqstat.dirs  xturqstat.changelog  xturqstat.dirs  xturqstat.menu
mappings/: Makefile.in  charsets.cpp  charsets.h  iso-ir-11.txt  iso-ir-60.txt  koi8-u.txt  makemappings.pl
po/: Makefile.in  sv.po  update-po.sh  xturqstat.po
templates/: default.tpl  html.tpl  svenska.tpl
visualc/: .gitignore  config.h  makedist.cmd  turqstat-core.vcproj  turqstat.sln  turqstat.vcproj  xturqstat.vcproj
